FB chatbox for all pages

--- a/postcube.cz/src/html/layouts/main.njk
+++ b/postcube.cz/src/html/layouts/main.njk
@@ -73,6 +73,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <link rel="stylesheet" href="/assets/css/components/footer.css">
 {% include 'components/footer.njk' %}
+{% include 'components/chatbox.njk'%}
 
 
 {% block javascript %}{% endblock %}
