--- a/postcube.cz/src/html/layouts/homepage.njk
+++ b/postcube.cz/src/html/layouts/homepage.njk
@@ -73,6 +73,7 @@
 
 <link rel="stylesheet" href="/assets/css/components/footer.css">
 {% include 'components/footer.njk' %}
+{% include 'components/chatbox.njk'%}
 
 
 {% block javascript %}{% endblock %}
