Added info about VAT

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -974,7 +974,7 @@
     <div class="hc-price-list__text">
       <p>Cena vstupenky obsahuje: vstup na camp (program), ubytování - chatky nebo stany, koncerty, další doprovodný
         program, snídaně každé ráno po dobu trvání campu.
-        Vstupenky jsou jednotné (platí po celou dobu trvání campu 2.-5. 9. 2021)</p>
+        Vstupenky jsou jednotné (platí po celou dobu trvání campu 2.-5. 9. 2021). Ceny jsou bez DPH.</p>
     </div>
   </section>
 
