[www.hackercamp.cz] Added more text

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -616,7 +616,8 @@
               href="https://www.sobenak.cz/ubytovani/">Koukni na fotky ubytování</a>! Na
             těchto stránkách najdeš fotky domků, které mají největší ubytovací
             kapacitu. A&nbsp;pokud bys chtěl být více tábornický a punk, níže najdeš
-            ještě interiér menších chatek.</p>
+            ještě interiér menších chatek. Většina (2/3) těchto chatek je bez
+            elektrických zásuvek.</p>
         </div>
       </div>
     </div>
