[www.hackercamp.cz] Text corrections on FAQ page

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="utf-8"/>
-  <title>Často kladené dotazy Hacker Campu</title>
+  <title>Často kladené dotazy na Hacker Camp</title>
   <link rel="preconnect" href="https://res.cloudinary.com"/>
   <link rel="preconnect" href="https://www.googletagmanager.com"/>
   <link rel="preconnect" href="https://www.google-analytics.com"/>
@@ -452,18 +452,22 @@
             :) Už teď se ale můžeš těšit na hudební produkci&nbsp;&ndash; kapely i&nbsp;DJs,
             sportovní zábavu i&nbsp;přednášky a workshopy. Program je dynamický, pro teď
             se můžeš mrknout na jeho pracovní verzi&nbsp;&ndash; <a
-              href="https://docs.google.com/spreadsheets/d/1yS_QmndaW3Ulo8zAsctCSzIG1pmfjybghicFTjC9WSk/edit#gid=0">tohle
+              href="https://docs.google.com/spreadsheets/d/1mnIrvYw8Wb8AMQWpbbPV6wmLSwItNIgdrZS_O6jecxM/edit#gid=0">tohle
               nás přibližně čeká</a>.</p>
 
           <p>Jako dobrý, ale chceš vědět víc? Zajímají tě přednášky a
             workshopy? Co kdo bude říkat, jaký témata ho pálí? Podněty a témata se
             všemi, kdo projevili zájem, řešíme. A&nbsp;nic si nebudeme nechávat jen pro
-            sebe. Sleduj slack #program a budeš v&nbsp;obraze. Zatím můžeme z&nbsp;programu
+            sebe. Sleduj Slack #program a budeš v&nbsp;obraze. Zatím můžeme z&nbsp;programu
             vybrat třeba nabídky od Martina Nedvěda na vyprávění nejen
             o&nbsp;technologických trendech v&nbsp;hudebním průmyslu, nebo Petra Bartoše, který
             chce sdílet, jak vypadá stavění startupů očima CTO. Jakub Císař a
             Tomáš Dytrich vyberou zajímavosti z&nbsp;oblasti práva, které by vás neměli
             minout (EXITy, ESOPy, vyjednávání)…</p>
+
+          <blockquote>
+            <p>Na Slack dostaneš přístup po potvrzení platby za vstup.</p>
+          </blockquote>
 
           <p>Jak už jsme řekli, jedeme barcampově. Takže pokud budeš mít nápad a
             chuť na další přednáškové téma ještě na místě, bude na to čas
@@ -564,10 +568,12 @@
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
           <p>S&nbsp;sebou si nemusíš brát nic. Snídaně jsou v&nbsp;ceně a postarají se
-            o&nbsp;ně Kuchařky bez domova z&nbsp;neziskovky Jako doma. Neboj se, pokud nejsi fanda
-            čistě rostlinných jídel, snídaně doplní typičtější nabídka
-            vajíček, párků, apod. Během dne bude dostupný “festivalový” catering
-            v&nbsp;několika stáncích, případně food trucks. Obdobně festivalově bude
+            o&nbsp;ně <a href="http://jakodoma.org/kucharky-bez-domova-2/">Kuchařky bez domova</a> z&nbsp;neziskovky
+            Jako doma. Neboj se, pokud nejsi fanda čistě rostlinných jídel,
+            snídaně doplní typičtější nabídka vajíček, párků, apod.
+            Během dne bude dostupný “festivalový” catering v&nbsp;několika stáncích,
+            případně food trucks. uchařky bez domova se dále budou starat
+            o veganský catering po celou dobu campu. Obdobně festivalově bude
             zajištěn pitný režim&nbsp;&ndash; točené pivo, nepivo, vymazlené drinky,
             hipsterská káva, čajovna a další pochutiny.</p>
         </div>
@@ -631,10 +637,11 @@
 
           <p>Na místo konání akce se můžeš dostat více způsoby:</p>
 
-          <ul>
-            <li>Vlakem</li>
-            <li>Autobusem</li>
-          </ul>
+          <ol>
+            <li>BUS - Praha ->Příbram + Příbram -> Rožmitál pod Třemšínem</li>
+            <li>BUS - méněkrát denně - Praha Smíchov -> Rožmitál pod Třemšínem</li>
+            <li>VLAK - Praha Smíchov -> Březnice + Březnice -> Rožmitál pod Třemšínem</li>
+          </ol>
 
           <p>Budeš potřebovat odvoz z&nbsp;nádraží nebo na autobus? Dejte vědět! Podle
             zájmu či potřeby domluvíme odvoz&nbsp;&ndash; jedno větší auto, Liftago
@@ -656,12 +663,12 @@
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
           <p>Budeme mít na místě dobrovolníky. Většina chatek i&nbsp;pokojů se dají
-            zamykat. Areál bude hlídat klasická místní bezpečnostní agentura. Pro ty,
-            co budou mít stany, řešíme místo, kde si budeš moct zamknout či uschovat
-            svoje cennosti, nebo nabít telefon pod dohledem :) Blízko bude info stánek
-            i&nbsp;místo, kde si můžeš pořídit drobnosti, které by ti mohly v&nbsp;batohu
-            omylem chybět&nbsp;&ndash; kartáček, alkohol tester před cestou domů, špunty do
-            uší… Půjčíme ti tam i&nbsp;powerbanku&nbsp;:)</p>
+            zamykat.  Pro ty, co budou mít stany, řešíme místo, kde si budeš
+            moct zamknout či uschovat svoje cennosti, nebo nabít telefon
+            pod dohledem. :) Blízko bude info stánek i&nbsp;místo, kde si můžeš pořídit
+            drobnosti, které by ti mohly v&nbsp;batohu omylem chybět&nbsp;&ndash; kartáček,
+            alkohol tester před cestou domů, špunty do uší…
+            Půjčíme ti tam i&nbsp;powerbanku&nbsp;:)</p>
         </div>
       </div>
     </div>
@@ -737,8 +744,9 @@
           <p>Akce je nekomerční, nemáme žádné finanční sponzory a veškeré
             peníze z&nbsp;lístků jdou na samotný Hacker camp. Tím, že nemáme sponzory, se
             na akci musí složit samotní účastníci. Největší náklady jsou spojené
-            s&nbsp;pronájmem lokality, vybavení, pódií atp. Zde najdete předpokládaný
-            rozpočet celé&nbsp;akce.</p>
+            s&nbsp;pronájmem lokality, vybavení, pódií atp.
+            <a href="https://docs.google.com/spreadsheets/d/1xPlHoW6voB-6ASSS1N6Gd5mAUHQ9NZ4DryM3_EKAuc4/edit#gid=0">Zde
+              najdete předpokládaný rozpočet celé&nbsp;akce</a>.</p>
 
           <p>Akce je nezisková, organizují ji dobrovolníci a případný zisk půjde do
             dalšího ročníku nebo jej věnujeme vybraným neziskovým organizacím.</p>
@@ -795,12 +803,8 @@
 
             <li>Hudební nástroj (pokud máš a chceš), těšíme se na táboráky</li>
 
-            <li>Ešus: v&nbsp;rámci stravování se budeme snažit o&nbsp;co nejudržitelnější
-              způsob odpadu (eko nádobí atd). Pokud si ale vezmeš svůj ešus, tato
-              varianta je vítaná&nbsp;:)</li>
-
-            <li>Power banku: určitě se ti bude hodit i&nbsp;tvoje vlastní, pokud nebudeš
-              mít, budeme mít k&nbsp;dispozici</li>
+            <li>Power banku, případně prodlužku do chatky: určitě se ti bude
+              hodit i&nbsp;tvoje vlastní, pokud nebudeš mít, budeme mít k&nbsp;dispozici</li>
 
             <li>Cokoliv dalšího, bez čeho se neobejdeš na našem festivalu&nbsp;:)</li>
           </ul>
