[www.hackercamp.cz] Added links and emphasis

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -447,8 +447,8 @@
       <h2 property="name">Na co se můžu těšit?</h2>
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
-          <p>Hacker Camp je na nás všech. Ale není to chaos. Inspiraci si bereme
-            z&nbsp;Barcampů. Takže program bude průběžně přibývat spolu s&nbsp;účastníky
+          <p>Hacker Camp je na nás všech. Ale není to chaos. <em>Inspiraci si bereme
+              z&nbsp;Barcampů.</em> Takže program bude průběžně přibývat spolu s&nbsp;účastníky.
             :) Už teď se ale můžeš těšit na hudební produkci&nbsp;&ndash; kapely i&nbsp;DJs,
             sportovní zábavu i&nbsp;přednášky a workshopy. Program je dynamický, pro teď
             se můžeš mrknout na jeho pracovní verzi&nbsp;&ndash; <a
@@ -458,11 +458,12 @@
           <p>Jako dobrý, ale chceš vědět víc? Zajímají tě přednášky a
             workshopy? Co kdo bude říkat, jaký témata ho pálí? Podněty a témata se
             všemi, kdo projevili zájem, řešíme. A&nbsp;nic si nebudeme nechávat jen pro
-            sebe. Sleduj Slack #program a budeš v&nbsp;obraze. Zatím můžeme z&nbsp;programu
-            vybrat třeba nabídky od Martina Nedvěda na vyprávění nejen
-            o&nbsp;technologických trendech v&nbsp;hudebním průmyslu, nebo Petra Bartoše, který
-            chce sdílet, jak vypadá stavění startupů očima CTO. Jakub Císař a
-            Tomáš Dytrich vyberou zajímavosti z&nbsp;oblasti práva, které by vás neměli
+            sebe. Sleduj Slack <a href="https://hackercampworkspace.slack.com/archives/C01URRT4Z8W">#program</a>
+            a budeš v&nbsp;obraze. Zatím můžeme z&nbsp;programu vybrat třeba nabídky od
+            <strong>Martina Nedvěda</strong> na vyprávění nejen
+            o&nbsp;technologických trendech v&nbsp;hudebním průmyslu, nebo <strong>Petra Bartoše</strong>, který
+            chce sdílet, jak vypadá stavění startupů očima CTO. <strong>Jakub Císař</strong> a
+            <strong>Tomáš Dytrich</strong> vyberou zajímavosti z&nbsp;oblasti práva, které by vás neměli
             minout (EXITy, ESOPy, vyjednávání)…</p>
 
           <blockquote>
@@ -471,13 +472,15 @@
 
           <p>Jak už jsme řekli, jedeme barcampově. Takže pokud budeš mít nápad a
             chuť na další přednáškové téma ještě na místě, bude na to čas
-            i&nbsp;prostor. A&nbsp;nezapomeň! Zapojení je na tobě. Program budeme postupně
+            i&nbsp;prostor. A&nbsp;nezapomeň! <strong>Zapojení je na tobě</strong>. Program budeme postupně
             zveřejňovat, můžeš ho průběžně sledovat a svůj nápad kdykoliv
-            upravit. Na to všechno ti postačí Slack. Pomůže nám, když se do slacku
-            zapojíš a budeš ho sledovat. @Ir tam řeší přednášky a workshopy, @Kája
-            sportovní program, co potrápí či potěší tvoje tělo, @Kuba a @Pavel
-            Kosina kapely, DJs a zábavu a @Jirka další doprovodný program. A&nbsp;když
-            nevíš kudy kam, zkus kanál #help_line&nbsp;:)</p>
+            upravit. Na to všechno ti postačí <a href="https://hackercampworkspace.slack.com/">Slack</a>.
+            Pomůže nám, když se do slacku zapojíš a budeš ho sledovat.
+            <code>@Ir</code> tam řeší přednášky a workshopy, <code>@Kája</code>
+            sportovní program, co potrápí či potěší tvoje tělo, <code>@Kuba</code>
+            a <code>@Pavel</code> Kosina kapely, DJs a zábavu a <code>@Jirka</code>
+            další doprovodný program. A&nbsp;když nevíš kudy kam, zkus kanál
+            <a href="https://hackercampworkspace.slack.com/archives/C026CD74YJ2">#help_line</a>.&nbsp;:)</p>
         </div>
       </div>
     </div>
@@ -487,12 +490,12 @@
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
           <p>Pamatuješ si na tábory? Taky jsme jezdili na celou dobu. Tohle je dost
-            podobná akce&nbsp;&ndash; vibem, místem i&nbsp;formátem:) Moc oceníme, když s&nbsp;náma
+            podobná akce&nbsp;&ndash; vibem, místem i&nbsp;formátem. :) Moc oceníme, když s&nbsp;náma
             budeš od čtvrtka do sobotní závěrečné párty (takže do neděle do
             rána). Uděláme vše proto, aby se ti nechtělo odjíždět. Ale pokud se
             rozmýšlíš, jestli přijet od pátku ráno do soboty odpoledne, nebo vůbec,
             raději přijeď. Slíbit, ale nemůžeme, že tě na místě nebudou zajímaví
-            lidé a super program i&nbsp;atmosféra držet déle, než plánuješ&nbsp;:)</p>
+            lidé a super program i&nbsp;atmosféra držet déle, než plánuješ.&nbsp;:)</p>
         </div>
       </div>
     </div>
@@ -502,12 +505,14 @@
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
           <p>Konkrétní jména lidí najdeš ve Slacku&nbsp;&ndash; koukni do kanálu
-            #kdo_prijede_na_cam&shy;p. Chybí mezi táborníky někdo, koho by camp bavil? Tak
-            ho pozvi. Můžeš to udělat stejně jako my. Ale pamatuj: Máš zodpovědnost
-            za toho, koho zveš. Takže vybírej, jestli to je někdo, s&nbsp;kým bys sám
+            <a href="https://hackercampworkspace.slack.com/archives/C026KB0G8V8">#kdo_prijede_na_cam&shy;p</a>.
+            Chybí mezi táborníky někdo, koho by camp bavil? Tak
+            ho pozvi. Můžeš to udělat stejně jako my. Ale pamatuj: <em>Máš zodpovědnost
+              za toho, koho zveš.</em> Takže vybírej, jestli to je někdo, s&nbsp;kým bys sám
             chtěl strávit tři dny v&nbsp;jedné chatce či stanu. Jo a koukni na to, jak
             vypadá areál Sobeňáku. Je tam i&nbsp;jeden bezbariérový pokoj. Pokud budeš
-            potřebovat ten, nebo máš nějaké další potřeby, prostě nám&nbsp;napiš.</p>
+            potřebovat ten, nebo máš nějaké další potřeby,
+            <a href="mailto:team&#64;hackercamp.cz">prostě nám&nbsp;napiš</a>.</p>
         </div>
       </div>
     </div>
@@ -516,11 +521,11 @@
       <h2 property="name">Co když bude pršet?</h2>
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
-          <p>Hlavní program bude probíhat v&nbsp;šapitó, kam se všichni vejdeme.
-            Současně budeme mít k&nbsp;dispozici táborovou jídelnu, kterou můžeme
+          <p>Hlavní program bude probíhat v&nbsp;<em>šapitó</em>, kam se všichni vejdeme.
+            Současně budeme mít k&nbsp;dispozici <em>táborovou jídelnu</em>, kterou můžeme
             využít nejen na snídaně. Většina dalších prostorů pro diskuze bude
             také zastřešená, typicky ve formě stanů. A&nbsp;lehký déšť při večerním
-            koncertu na open air stage nás nerozhodí.</p>
+            koncertu na <strong>open air stage</strong> nás nerozhodí.</p>
         </div>
       </div>
     </div>
@@ -531,15 +536,16 @@
         <div property="text">
           <p>Hacker camp není jen technologický barcamp. Chceme ho říznout
             i&nbsp;festivalem. Co si pod tím představit? Každý večer plánujeme jeden až
-            dva koncerty na open-air stage. Domluvený je už například Ventolín, který
-            přes den přednáší na UK a na Hacker campu zahraje svoje Disco Science pro
-            všechny mládenc a holkys. Mezi koncerty se můžete těšit třeba na stand-up
-            comedy v&nbsp;podání Nikoli Džokiče. Na pozdější hodiny se nám přihlásilo
+            dva koncerty na open-air stage. Domluvený je už například <strong>Ventolín</strong>, který
+            přes den přednáší na UK a na Hacker campu zahraje svoje
+            <a href="https://www.youtube.com/watch?v=jjTOYerHRVo">Disco Science</a> pro
+            všechny mládenc, pro všechny holkys. Mezi koncerty se můžete těšit třeba na stand-up
+            comedy v&nbsp;podání <strong>Nikoli Džokiče</strong>. Na pozdější hodiny se nám přihlásilo
             už několik&nbsp;DJs.</p>
 
-          <p>Pokud si budeš chtít odpočinout od hudby, můžeš zavítat třeba do
-            TopMonks lounge a vyzkoušet elektronickou vodní dýmku. A&nbsp;navíc při tom
-            vytěžit pár hookacoins. Nebo si vyzkoušet sítotisk a obohatit svoje tričko
+          <p>Pokud si budeš chtít odpočinout, můžeš zavítat třeba do
+            TopMonks lounge a vyzkoušet <a href="https://www.hookamonk.com/">elektronickou vodní dýmku</a>.
+            A&nbsp;navíc při tom vytěžit pár hookacoins. Nebo si vyzkoušet sítotisk a obohatit svoje tričko
             o&nbsp;logo Hacker campu. Nějakou chill out zónu vždycky najdeš. Třeba
             u&nbsp;táboráku s&nbsp;buřty.</p>
         </div>
@@ -551,7 +557,8 @@
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
           <p>Jasně, od toho bude celá human hacking zóna. Naučíme tě třeba, jak
-            zapojit zdravý pohyb do každodenního života. Když budeš moc chtít, tak
+            zapojit <strong>zdravý pohyb</strong> do každodenního života.
+            Když budeš moc chtít, tak
             tě po ránu vyženeme na východ slunce na Praze, pak si můžeš dát pár
             tempíček v&nbsp;rybníku no a vypitý pivka během dne vypotíš u&nbsp;fotbálku. Je
             to málo? Tak dobře, bude i&nbsp;atletickej trénink. A&nbsp;boxlakros. Asi
@@ -568,8 +575,8 @@
       <div property="suggestedAnswer acceptedAnswer" typeof="Answer">
         <div property="text">
           <p>S&nbsp;sebou si nemusíš brát nic. Snídaně jsou v&nbsp;ceně a postarají se
-            o&nbsp;ně <a href="http://jakodoma.org/kucharky-bez-domova-2/">Kuchařky bez domova</a> z&nbsp;neziskovky
-            Jako doma. Neboj se, pokud nejsi fanda čistě rostlinných jídel,
+            o&nbsp;ně <a href="http://jakodoma.org/kucharky-bez-domova-2/">Kuchařky bez domova</a>
+            z&nbsp;neziskovky Jako doma. Neboj se, pokud nejsi fanda čistě rostlinných jídel,
             snídaně doplní typičtější nabídka vajíček, párků, apod.
             Během dne bude dostupný “festivalový” catering v&nbsp;několika stáncích,
             případně food trucks. uchařky bez domova se dále budou starat
@@ -638,9 +645,9 @@
           <p>Na místo konání akce se můžeš dostat více způsoby:</p>
 
           <ol>
-            <li>BUS - Praha ->Příbram + Příbram -> Rožmitál pod Třemšínem</li>
-            <li>BUS - méněkrát denně - Praha Smíchov -> Rožmitál pod Třemšínem</li>
-            <li>VLAK - Praha Smíchov -> Březnice + Březnice -> Rožmitál pod Třemšínem</li>
+            <li>🚌 - <strong>Praha → Příbram</strong> + <strong>Příbram → Rožmitál pod Třemšínem</strong></li>
+            <li>🚌 (méně často) - <strong>Praha Smíchov → Rožmitál pod Třemšínem</strong></li>
+            <li>🚂 - <strong>Praha Smíchov → Březnice</strong> + <strong>Březnice → Rožmitál pod Třemšínem</strong></li>
           </ol>
 
           <p>Budeš potřebovat odvoz z&nbsp;nádraží nebo na autobus? Dejte vědět! Podle
@@ -651,9 +658,9 @@
           <p>Samozřejmě, že můžeš dorazit autem. Ale pokud svého plechového
             mazlíka bereš na výlet, zkus ho, prosím, naplnit. Budeme rádi, když les
             bude lesem a ne parkovištěm. Takže pokud nemáš spolucestující, najdi si
-            nějaké v&nbsp;kanále #spolujízda. A&nbsp;dej nám vědět ve formuláři, jak to
-            s&nbsp;autem a parkingem budeš mít, ať vše zajistíme ke spokojenosti
-            všech&nbsp;:)</p>
+            nějaké v&nbsp;kanále <a href="https://hackercampworkspace.slack.com/archives/C0278R69JUQ">#spolujízda</a>.
+            A&nbsp;dej nám vědět ve formuláři, jak to s&nbsp;autem a parkingem budeš mít,
+            ať vše zajistíme ke spokojenosti všech&nbsp;:)</p>
         </div>
       </div>
     </div>
