--- a/shared/src/common/helpers.njk
+++ b/shared/src/common/helpers.njk
@@ -38,27 +38,29 @@
   </div>
 {% endmacro %}
 
-{% macro image(image, images, width, height, alt, style, class="responsive", phoneWidth, tabletWidth) -%}
+{% macro image(image, images, width, height, alt, style, class="responsive", phoneWidth, phoneHeight, tabletWidth) -%}
   {% set imageUrl = images[image]["public_id"] %}
+  {% set w = phoneWidth if phoneWidth else width %}
+  {% set h = phoneHeight if phoneHeight else height %}
   <picture>
     <source media="screen and (max-width: 479px)"
-            srcset="{{ imageUrl | cloudinaryUrl(dpr=1,width=phoneWidth if phoneWidth else width) }} 1x,
-                    {{ imageUrl | cloudinaryUrl(dpr=1.5,width=phoneWidth if phoneWidth else width) }} 1.5x,
-                    {{ imageUrl | cloudinaryUrl(dpr=2,width=phoneWidth if phoneWidth else width) }} 2x">
+            srcset="{{ imageUrl | cloudinaryUrl(dpr=1,width=phoneWidth if phoneWidth else width, ar=w/h) }} 1x,
+                    {{ imageUrl | cloudinaryUrl(dpr=1.5,width=phoneWidth if phoneWidth else width, ar=w/h) }} 1.5x,
+                    {{ imageUrl | cloudinaryUrl(dpr=2,width=phoneWidth if phoneWidth else width, ar=w/h) }} 2x">
     <source media="screen and (min-width: 480px) and (max-width: 839px)"
-            srcset="{{ imageUrl | cloudinaryUrl(dpr=1,width=tabletWidth if tabletWidth else width) }} 1x,
-                    {{ imageUrl | cloudinaryUrl(dpr=1.5,width=tabletWidth if tabletWidth else width) }} 1.5x,
-                    {{ imageUrl | cloudinaryUrl(dpr=2,width=tabletWidth if tabletWidth else width) }} 2x">
+            srcset="{{ imageUrl | cloudinaryUrl(dpr=1,width=tabletWidth if tabletWidth else width, ar=w/h) }} 1x,
+                    {{ imageUrl | cloudinaryUrl(dpr=1.5,width=tabletWidth if tabletWidth else width, ar=w/h) }} 1.5x,
+                    {{ imageUrl | cloudinaryUrl(dpr=2,width=tabletWidth if tabletWidth else width, ar=w/h) }} 2x">
     <source media="screen and (min-width: 840px)"
-            srcset="{{ imageUrl | cloudinaryUrl(dpr=1,width=width) }} 1x,
-                    {{ imageUrl | cloudinaryUrl(dpr=1.5,width=width) }} 1.5x,
-                    {{ imageUrl | cloudinaryUrl(dpr=2,width=width) }} 2x">
+            srcset="{{ imageUrl | cloudinaryUrl(dpr=1,width=width, ar=w/h) }} 1x,
+                    {{ imageUrl | cloudinaryUrl(dpr=1.5,width=width, ar=w/h) }} 1.5x,
+                    {{ imageUrl | cloudinaryUrl(dpr=2,width=width, ar=w/h) }} 2x">
     <img alt="{{ alt }}"
          loading="lazy"
-         width="{{ width }}"
-         height="{{ height }}"
+         width="{{ w }}"
+         height="{{ h }}"
          class="{{ class }}"
          style="{{ style }}"
-         src="{{ imageUrl | cloudinaryUrl(dpr="auto",width=width) }}">
+         src="{{ imageUrl | cloudinaryUrl(dpr="auto",width=w) }}">
   </picture>
 {%- endmacro %}
