--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -1,3 +1,4 @@
+{%- from "common/helpers.njk" import image -%}
 <!DOCTYPE html>
 <html lang="cs">
 <head>
@@ -655,6 +656,33 @@
             kapacitu. A&nbsp;pokud bys chtěl být více tábornický a punk, níže najdeš
             ještě interiér menších chatek. Většina (2/3) těchto chatek je bez
             elektrických zásuvek.</p>
+
+          <style>
+            .accommodation__image {
+              height: auto;
+            }
+            @media screen and (min-width: 480px) and (max-width: 839px) {
+              .accommodation__image {
+                width: 300px;
+              }
+              .accommodation__image--portrait {
+	                width: 150px;
+              }
+            }
+            @media screen and (min-width: 840px) {
+              .accommodation__image {
+                width: 340px;
+              }
+              .accommodation__image--portrait {
+                width: 170px;
+              }
+            }
+          </style>
+          <div style="display: flex; flex-wrap: wrap; justify-content: space-between">
+            {{ image("faq-ubytko-1.jpg", images, phoneWidth=200, phoneHeight=132, tabletWidth=300, width=340, alt="šestilůžkový pokoj", class="accommodation__image") }}
+            {{ image("faq-ubytko-2.jpg", images, phoneWidth=200, phoneHeight=132, tabletWidth=300, width=340, alt="čtyřlůžková chatka", class="accommodation__image") }}
+            {{ image("faq-ubytko-3.jpg", images, phoneWidth=100, phoneHeight=132, tabletWidth=150, width=170, alt="dvojlůžková chatka", class="accommodation__image accommodation__image--portrait") }}
+          </div>
         </div>
       </div>
     </div>
