Uprava zminky o Kiwi

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -617,7 +617,7 @@
       >,
       <span property="attendee" typeof="Organization"
       ><a property="sameAs" href="https://www.kiwi.com/en/"
-        >Kiwi</a
+        >Kiwi.com</a
         ></span
       >,
       <span property="attendee" typeof="Organization"
