--- a/shared/src/common/helpers.njk
+++ b/shared/src/common/helpers.njk
@@ -61,7 +61,7 @@
          height="{{ h }}"
          class="{{ class }}"
          style="{{ style }}"
-         title="{{ title }}"
+         {% if title %}title="{{ title }}"{% endif %}
          src="{{ imageUrl | cloudinaryUrl(dpr="auto",width=w) }}">
   </picture>
 {%- endmacro %}
