[www.hackercamp.cz] Fixed broken FAQ markup

--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -685,7 +685,7 @@
                 tabletWidth=300,
                 width=340,
                 alt="šestilůžkový pokoj",
-                title="pokoj pro šest"
+                title="pokoj pro šest",
                 class="accommodation__image") }}
             {{ image("faq-ubytko-2.jpg", images,
                 phoneWidth=200,
@@ -693,7 +693,7 @@
                 tabletWidth=300,
                 width=340,
                 alt="čtyřlůžková chatka",
-                title="chatka pro čtyři"
+                title="chatka pro čtyři",
                 class="accommodation__image") }}
             {{ image("faq-ubytko-3.jpg", images,
                 phoneWidth=100,
@@ -701,7 +701,7 @@
                 tabletWidth=150,
                 width=170,
                 alt="dvojlůžková chatka",
-                title="chatka pro dva"
+                title="chatka pro dva",
                 class="accommodation__image accommodation__image--portrait") }}
           </div>
         </div>
