--- a/www.hackercamp.cz/src/html/faq/index.njk
+++ b/www.hackercamp.cz/src/html/faq/index.njk
@@ -519,7 +519,7 @@
             budeš od čtvrtka do sobotní závěrečné párty (takže do neděle do
             rána). Uděláme vše proto, aby se ti nechtělo odjíždět. Ale pokud se
             rozmýšlíš, jestli přijet od pátku ráno do soboty odpoledne, nebo vůbec,
-            raději přijeď. Slíbit, ale nemůžeme, že tě na místě nebudou zajímaví
+            raději přijeď. Slíbit ale nemůžeme, že tě na místě nebudou zajímaví
             lidé a super program i&nbsp;atmosféra držet déle, než plánuješ.&nbsp;:)</p>
         </div>
       </div>
@@ -604,7 +604,7 @@
             z&nbsp;neziskovky Jako doma. Neboj se, pokud nejsi fanda čistě rostlinných jídel,
             snídaně doplní typičtější nabídka vajíček, párků, apod.
             Během dne bude dostupný “festivalový” catering v&nbsp;několika stáncích,
-            případně food trucks. uchařky bez domova se dále budou starat
+            případně food trucks. Kuchařky bez domova se dále budou starat
             o veganský catering po celou dobu campu. Obdobně festivalově bude
             zajištěn pitný režim&nbsp;&ndash; točené pivo, nepivo, vymazlené drinky,
             hipsterská káva, čajovna a další pochutiny.</p>
