Arx - New Header Video

--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -16,6 +16,11 @@
             <a class="button__info" href="/investments/">OUR PORTFOLIO</a>
           </div>
         </div>
+        <div class="intro__video">
+          <video aria-hidden="true" class="responsive" muted autoplay loop playsinline>
+            <source src="https://res.cloudinary.com/topmonks/video/upload/f_auto,h_622,q_auto,w_700/v1628344441/arx.monks.cloud/arx-header.mp4"/>
+          </video>
+        </div>
       </div>
     </div>
   </section>
